MEFA4 VERSIONS

Version 0.2-8 -- May 14, 2012
    *

Version 0.2-7 -- May 2, 2012
    * inst/COPYING removed.
    * stack method added to Mefa class.
    * groupSums, groupMeans: failed when join was "inner" and both
      samp and taxa slots of the new object were NULL. Check
      on NULL attribute table related join type is now relaxed
      for object class Mefa (reported by D. Stralberg).
    * mbind uses drop=TRUE to protect single column/row cases.

Version 0.2-6 -- March 19, 2012
    * Rd link to Matrix:::xtabs removed (sparse=TRUE is in
      stats:::xtabs). Reported by Uwe Ligges.

Version 0.2-5 -- October 18, 2011
    * Startup message: line break removed.

Version 0.2-4 -- August 23, 2011
    * groupMeans: NA handling changed, mean is calculated
      as dividing by the non NA values when collapsing.

Version 0.2-3 -- July 9, 2011
    * packageStartupMessage used in zzz.R .onAttach
    * Typos fixed in vignette and help pages.
    * 1x1 dim issues fixed again using drop=FALSE
      at many places (Mefa, <-, [, mbind).
    * typo corrected in mbind for Mefa objects that
      left TAXAPART temp variable in result.
    * samp/taxa table handling in mbind for Mefa objects
      is revised, not using default merge(..., all=TRUE).
    * Xtab: lhs must be numeric.

Version 0.2-2 -- May 13, 2011
    * Allowing for 0 and 1 row/col Mefa objects ('xtab<-' and '[').
    * nonDuplicated finds y in data frame and patent frame first.

Version 0.2-1 -- February 14, 2011
    * Melt function added to reverse side effects of Xtab.
    * Docs for Melt added (Rd, tests, vignette).

Version 0.2-0 -- February 7, 2011
    * First public CRAN release.

Version 0.1-2 -- January 26, 2011
    * nonDuplicated function added.
    * segmented Xtab output implemnted
      as list of sparse matrices.

Version 0.1-1 -- January 25, 2011
    * S4 classes working properly.
    * /tests dir added to pkg tree.
    * Xtab class is redundant, 
      use dgCMatrix class instead.