@@ -3,14 +3,18 @@
 \alias{mbind,matrix,matrix-method}
 \alias{mbind,sparseMatrix,sparseMatrix-method}
 \alias{mbind,Mefa,Mefa-method}
+\alias{mbind2}
+\alias{mbind2,matrix,matrix-method}
+\alias{mbind2,sparseMatrix,sparseMatrix-method}
 \title{
 Combine R Objects by Rows and Columns
 }
 \description{
-Combine R objects by rows and columns
+Combine R objects by rows and columns.
 }
 \usage{
 mbind(x, y, fill, ...)
+mbind2(x, y, fill, ...)
 }
 \arguments{
   \item{x, y}{
@@ -31,6 +35,10 @@ are filled up with \code{fill}.
 
 If relational table in \code{x} is \code{NULL}, corresponding values from same table
 of \code{y} are used.
+
+\code{mbind2} combines \code{x} and \code{y} so that inner set is
+calculated as sum of corresponding elements from \code{x} and \code{y} 
+(unlike in \code{mbind} with a left join manner).
 }
 \value{
 An object similar to the input one.
@@ -61,7 +69,13 @@ taxax <- NULL
 
 mbind(x,y)
 mbind(as(x,"sparseMatrix"),as(y,"sparseMatrix"))
-unclass(mbind(Mefa(x,sampx),Mefa(y,sampy,taxay)))
+xy <- mbind(Mefa(x,sampx),Mefa(y,sampy,taxay))
+unclass(xy)
+
+mbind2(x,y)
+mbind2(as(x,"sparseMatrix"),as(y,"sparseMatrix"))
+xtab(xy) <- mbind2(x, y)
+unclass(xy)
 }
 \keyword{ methods }
 \keyword{ manip }% __ONLY ONE__ keyword per line
